--- a/src/frontend/html/index.html
+++ b/src/frontend/html/index.html
@@ -1,1 +1,8 @@
-hello world!
+<html>
+<!-- <script>
+
+	fetch('webgraph-api/hello/g/1').then(console.log);
+</script> -->
+
+Hello from the frontend!
+</html>
