--- a/src/frontend/html/index.html
+++ b/src/frontend/html/index.html
@@ -1,8 +1,71 @@
+<!DOCTYPE html>
 <html>
-<!-- <script>
 
-	fetch('webgraph-api/hello/g/1').then(console.log);
-</script> -->
+<head>
+	<title>Dynamic Graph</title>
+	<script type="text/javascript" src="https://unpkg.com/vis-network/standalone/umd/vis-network.min.js"></script>
+	<style>
+		#network {
+			width: 100%;
+			height: 500px;
+			border: 1px solid lightgray;
+		}
+	</style>
+</head>
 
-Hello from the frontend!
+<body>
+	<h2>Dynamic Graph</h2>
+	<div id="network"></div>
+	<!-- <button onclick="addNode()">Add Node</button> -->
+	<!-- <button onclick="addEdge()">Add Edge</button> -->
+
+	<script>
+		// Create nodes and edges datasets
+		let topic = 'star'; // Replace with your topic
+		let graph_name = 'star'; // Replace with your graph name
+		let queue = [1];
+
+		const nodes = new vis.DataSet([
+			{ id: queue[0], label: queue[0] },
+		]);
+
+		const edges = new vis.DataSet([]);
+
+		// Create a network
+		const container = document.getElementById('network');
+		const data = { nodes, edges };
+		const options = {};
+		const network = new vis.Network(container, data, options);
+
+		let nextNodeId = 3;
+
+		function addNode() {
+			nodes.add({ id: nextNodeId, label: nextNodeId });
+			nextNodeId++;
+		}
+
+		async function addEdge() {
+
+			if (queue.length === 0) {
+				return;
+			}
+
+			let each = queue.shift();
+			let response = await fetch(`/webgraph-api/neighborhood/${topic}/${graph_name}/${each}`)
+				.then(response => response.json())
+				.catch(error => console.error('Error fetching neighbors:', error));
+
+			response.neighborhood.forEach(neighbor => {
+				if (!nodes.get(neighbor)) {
+					nodes.add({ id: neighbor, label: neighbor });
+					queue.push(neighbor);
+				}
+				edges.add({ from: each, to: neighbor });
+			});
+
+			addEdge();
+		}
+	</script>
+</body>
+
 </html>
