--- a/src/frontend/html/index.html
+++ b/src/frontend/html/index.html
@@ -2,12 +2,14 @@
 <html>
 
 <head>
-	<title>Dynamic Graph</title>
+	<title>Webgraph interface</title>
 	<!-- <script type="text/javascript" src="https://unpkg.com/vis-network/standalone/umd/vis-network.min.js"></script>	 -->
 	<script type="text/javascript" src="vis-network.min.js"></script>
 	<link href="data:image/x-icon;base64,YourBase64StringHere" rel="icon" type="image/x-icon" />
-	<meta name="viewport"
-		content="user-scalable=no, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, minimal-ui">
+	<link rel="stylesheet" href="https://www.w3schools.com/w3css/5/w3.css">
+	<!-- <meta name="viewport"
+		content="user-scalable=no, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, minimal-ui"> -->
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<style>
 		#network {
 			width: 100%;
@@ -18,10 +20,24 @@
 </head>
 
 <body>
-	<h2>Dynamic Graph</h2>
-	<div id="network"></div>
-	<button onclick="addEdge()">Add Edge</button>
-	<button id="toggle_button" onclick="toggle()">Toggle</button>
+	<div class="w3-container">
+		<h1>Webgraph interface</h1>
+
+		<div class="w3-container ">
+			<p>Topic: <span id="topic">...</span></p>
+			<p>Graph name: <span id="graph_name">...</span></p>
+			<p>|V|: <span id="graph_V">...</span></p>
+			<p>|E|: <span id="graph_E">...</span></p>
+			<p>Queue length: <span id="queue_length">1</span></p>
+		</div>
+	</div>
+
+	<div id="network" class="w3-container w3-card w3-border w3-round w3-margin"></div>
+
+	<div class="w3-container w3-border w3-round">
+		<button onclick="addEdge()">Add Edge</button>
+		<button id="toggle_button" onclick="toggle()">Toggle</button>
+	</div>
 
 	<script>
 
@@ -29,6 +45,12 @@
 		let topic = 'pg'; // Replace with your topic
 		let graph_name = 'pg'; // Replace with your graph name
 		let queue = [759389];
+
+		document.getElementById('topic').innerText = topic;
+		document.getElementById('graph_name').innerText = graph_name;
+		document.getElementById('graph_V').innerText = '...'; // Placeholder for |V|
+		document.getElementById('graph_E').innerText = '...'; // Placeholder for |E|
+		document.getElementById('queue_length').innerText = queue.length;
 
 		let go = false;
 
@@ -41,6 +63,7 @@
 				n.color = { background: color };
 			}
 			nodes.add(n);
+			document.getElementById('graph_V').innerText = nodes.length;
 		}
 
 		queue.forEach(node => { addNode(node, 'white'); });
@@ -62,31 +85,46 @@
 
 		async function addEdge() {
 
+
 			while (go && queue.length > 0) {
 
-				let each = queue.shift();
-				let response = await fetch(`/webgraph-api/neighborhood/${topic}/${graph_name}/${each}`)
-					.then(response => response.json())
-					.catch(error => console.error('Error fetching neighbors:', error));
+				document.getElementById('queue_length').innerText = queue.length;
 
+				let each = queue.shift();
 				nodes.update([{ id: each, color: { background: 'lightgray' } }]);
 
-				response.neighborhood.forEach(async neighbor => {
+				async function addNeighbor(neighbor, transposed) {
 
 					if (!nodes.get(neighbor)) {
 						addNode(neighbor); // Add the neighbor node if it doesn't exist
 
 						queue.push(neighbor);
 
+					}
+					// else {
+					// 	console.log(`Already seen node ${neighbor}`);
+					// }
+
+					if (transposed) {
+						edges.add({ from: neighbor, to: each, arrows: 'to' });
 					} else {
-						console.log(`Already seen node ${neighbor}`);
+						edges.add({ from: each, to: neighbor, arrows: 'to' });
 					}
 
-					edges.add({ from: each, to: neighbor, arrows: 'to' });
-
+					document.getElementById('graph_E').innerText = edges.length;
 					await sleep(618); // Sleep for 100 milliseconds to avoid overwhelming the browser
 
-				});
+				}
+
+				await fetch(`/webgraph-api/neighborhood/${topic}/${graph_name}/${each}`)
+					.then(response => response.json())
+					.then(data => data.neighborhood.forEach(v => addNeighbor(v, false)))
+					.catch(error => console.error('Error fetching neighbors:', error));
+
+				// await fetch(`/webgraph-api/neighborhood/${topic}/${graph_name}-t/${each}`)
+				// 	.then(response => response.json())
+				// 	.then(data => data.neighborhood.forEach(v => addNeighbor(v, true)))
+				// 	.catch(error => console.error('Error fetching neighbors:', error));
 			}
 		}
 
