--- a/src/frontend/html/index.html
+++ b/src/frontend/html/index.html
@@ -42,9 +42,10 @@
 	<script>
 
 		// Create nodes and edges datasets
-		let topic = 'pg'; // Replace with your topic
-		let graph_name = 'pg'; // Replace with your graph name
+		let topic = 'ag'; // Replace with your topic
+		let graph_name = 'ag'; // Replace with your graph name
 		let queue = [759389];
+		// let queue = [0];
 
 		document.getElementById('topic').innerText = topic;
 		document.getElementById('graph_name').innerText = graph_name;
@@ -66,12 +67,21 @@
 			document.getElementById('graph_V').innerText = nodes.length;
 		}
 
-		queue.forEach(node => { addNode(node, 'white'); });
+		queue.forEach(addNode);
 
 		// Create a network
 		const container = document.getElementById('network');
 		const data = { nodes, edges };
-		const options = {};
+		const options = {
+			nodes: {
+				shape: 'dot',
+				size: 10,
+				font: { size: 14, color: '#343a40' },
+				borderWidth: 2,
+			},
+			edges: { smooth: { type: "continuous" } },
+			physics: { stabilization: false },
+		};
 		const network = new vis.Network(container, data, options);
 
 		let sleep = (ms) => new Promise(resolve => setTimeout(resolve, ms));
@@ -85,13 +95,10 @@
 
 		async function addEdge() {
 
-
 			while (go && queue.length > 0) {
 
-				document.getElementById('queue_length').innerText = queue.length;
-
 				let each = queue.shift();
-				nodes.update([{ id: each, color: { background: 'lightgray' } }]);
+				document.getElementById('queue_length').innerText = queue.length;
 
 				async function addNeighbor(neighbor, transposed) {
 
@@ -99,11 +106,7 @@
 						addNode(neighbor); // Add the neighbor node if it doesn't exist
 
 						queue.push(neighbor);
-
 					}
-					// else {
-					// 	console.log(`Already seen node ${neighbor}`);
-					// }
 
 					if (transposed) {
 						edges.add({ from: neighbor, to: each, arrows: 'to' });
@@ -118,7 +121,10 @@
 
 				await fetch(`/webgraph-api/neighborhood/${topic}/${graph_name}/${each}`)
 					.then(response => response.json())
-					.then(data => data.neighborhood.forEach(v => addNeighbor(v, false)))
+					.then(data => {
+						data.neighborhood.forEach(v => addNeighbor(v, false));
+						nodes.update([{ id: each, value: data.outdegree, color: { background: 'lightgray' } }]);
+					})
 					.catch(error => console.error('Error fetching neighbors:', error));
 
 				// await fetch(`/webgraph-api/neighborhood/${topic}/${graph_name}-t/${each}`)
